<resources>
    <string name="app_name">appfirebase</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextSenha">Senha</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="TextViewRepeteSenhaCadastro">Repetir Senha</string>
    <string name="ButtonCadastrarCadastro">Cadastrarr</string>
    <string name="TextViewRecuperarSenha">Recuperar Senha</string>
    <string name="ButtonRecuperarConta">Recuperar Conta</string>
</resources>