<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RecuperarConta"
    android:id="@+id/main">

    <ImageButton
        android:id="@+id/ButtonBackRecuperarConta"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="Voltar"
        android:src="@drawable/ic_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/TextViewRecuperarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewRecuperarSenha"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonBackRecuperarConta" />

    <View
        android:id="@+id/containerComponentsRecuperarConta"
        style="@style/loginContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewRecuperarConta" />

    <EditText
        android:id="@+id/editTextEmailRecuperarConta"
        style="@style/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/bt_recuperar"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsRecuperarConta" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_recuperar"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ButtonRecuperarConta"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRecuperarConta" />

</androidx.constraintlayout.widget.ConstraintLayout>