<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <View
            android:id="@+id/containerComponents"
            style="@style/loginContainerComponents"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/editTextEmail"
            android:drawableRight="@drawable/ic_email"
            style="@style/Edit_text"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toTopOf="@+id/containerComponents"
        />

        <EditText
            android:id="@+id/editTextSenhaLogin"
            style="@style/Edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_lock"
            android:hint="@string/editTextSenha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/buttonEntrar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenhaLogin"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

        <TextView
            android:id="@+id/textViewCadastrarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Cadastrar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewRecuperarLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

        <TextView
            android:id="@+id/textViewRecuperarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Esqueceu a senha ?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCadastrarLogin"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
